# BetAnalytics

./: .Rbuildignore  .gitignore  Analysis.R  BoxscoreData2021-2022.RDS  BoxscoreData20230207.RDS  BoxscoreData20230210.RDS  DESCRIPTION  HelperFunctions.R  NBABoxScoreScrapper.R  README.md  pyproject.toml  sportsbookreview_scraper.py
bet_analytics/: __init__.py
bet_analytics/analytics/: __init__.py  exploration.py
bet_analytics/config/: __init__.py  settings.py
bet_analytics/data/: __init__.py  datasets.py
bet_analytics/data/collectors/: __init__.py  basketball_reference.py  sportsbookreview.py
bet_analytics/features/: __init__.py  engineering.py  pipelines.py
bet_analytics/models/: __init__.py  training.py
docs/: data_collection.md  design_philosophy.md
scripts/: collect_basketball_reference_data.py  collect_sportsbookreview_odds.py
tests/unit/: test_pipeline.py
