[project]
name = "bet-analytics"
version = "0.1.0"
description = "Automated NBA betting analytics platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.2.0",
    "requests>=2.32.0",
    "beautifulsoup4>=4.12.0",
    "pyarrow>=15.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0"
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["bet_analytics"]

[tool.bet_analytics]
package-root = "bet_analytics"
raw-data-dir = "data/raw"
